--- a/frontend_react/package.json
+++ b/frontend_react/package.json
@@ -1,6 +1,7 @@
 {
   "name": "frontend_react",
   "version": "0.1.0",
+  "homepage": "https://wongyewkeong.github.io",
   "private": true,
   "dependencies": {
     "@sanity/client": "^3.3.0",
@@ -18,6 +19,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
